<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Coordinate</string>
    <string name="UtilsNegativeButtonText">No</string>
    <string name="UtilsPositiveButtonText">OK</string>
    <string name="delete_button">Delete</string>
    <string name="UtilsInvalidValue">value must be >= %d</string>
    <string name="TemplateNotCreatedToast">%s not created</string>
    <string name="TemplateCreatedToast">%s created</string>
    <string name="app_intro_activity_label">App Intro</string>
    <string name="app_intro_intro_title_slide1">Welcome to Coordinate!</string>
    <string name="app_intro_intro_summary_slide1">Coordinate is a data collection app that organizes sample names into grids that are based on predefined templates. Templates are highly customizable and can include custom fields for metadata, alphabetical or numeric row and column naming, and specific or randomly excluded cells.</string>
    <string name="app_intro_intro_title_slide2">Features and Customization</string>
    <string name="app_intro_intro_summary_slide2">Feature description goes here.\n\n Customization.</string>
    <string name="app_intro_required_setup_title">Required Setup</string>
    <string name="app_intro_required_setup_summary">To get started using Coordinate, grant the necessary permissions for the app and then define a folder where your data will be stored.</string>
    <string name="app_intro_permissions_title">Permissions</string>
    <string name="app_intro_permissions_summary">Please grant the necessary permissions</string>
    <string name="app_intro_storage_title">Define Storage</string>
    <string name="app_intro_storage_summary">Define a folder where your data will be stored.</string>
    <string name="app_intro_permissions_warning">Permissions not granted</string>
    <string name="app_intro_storage_warning">Storage directory not set</string>
    <string name="app_intro_optional_setup_title">Optional Setup</string>
    <string name="app_intro_optional_setup_summary">Optional settings customize how Coordinate is set up for data collection.</string>
    <string name="app_intro_load_sample_data_title">Load Sample Data</string>
    <string name="app_intro_load_sample_data_summary">Import a sample database that includes example grids, templates, and projects.</string>
    <string name="app_intro_enable_tutorial_title">Tutorial</string>
    <string name="app_intro_enable_tutorial_summary">Add a help icon to the top toolbar that describes features throughout the app.</string>
    <string name="app_intro_default_templates_header">Default Templates</string>
    <string name="app_intro_seed_tray_template_title">Seed Tray</string>
    <string name="app_intro_seed_tray_template_summary">A 6×20 seed tray template with optional fields for tray ID, person, and date.</string>
    <string name="app_intro_dna_plate_template_title">DNA Plate</string>
    <string name="app_intro_dna_plate_template_summary">An 8×12 DNA plate template with optional fields for plate ID, plate name, and date.</string>
    <string name="app_intro_htpg_plate_template_title">HTPG Plate</string>
    <string name="app_intro_htpg_plate_template_summary">An 8×12 HTPG plate template with optional fields for plate ID, username, and date.</string>
    <string name="CollectorActivityLabel">Collect Data</string>
    <string name="about_version_title">Version</string>
    <string name="about_title_pheno_apps">PhenoApps</string>
    <string name="about_project_lead_title">Project Lead</string>
    <string name="about_developer_trife" translatable="false">Trevor Rife</string>
    <string name="about_developer_trife_location" translatable="false">Clemson University</string>
    <string name="about_developer_trife_email" translatable="false">twrife@clemson.edu</string>
    <string name="about_email_title">Email</string>
    <string name="about_contributors_title">Contributors</string>
    <string name="about_contributors_developers_title">Developers</string>
    <string name="about_contributors_funding_title">Funding</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_technical_title">Technical Details</string>
    <string name="about_github_title">GitHub</string>
    <string name="about_help_translate_title">Help translate</string>
    <string name="changelog_title">Changelog</string>
    <string name="libraries_title">Libraries</string>
    <string name="about_manual_title">Manual</string>
    <string name="export_dir">exports</string>
    <string name="template_dir">templates</string>
    <string name="database_dir">database</string>
    <string name="SelectExportedTemplateTitle">Import template</string>
    <string name="TemplatesActivityLabel">Templates</string>
    <string name="TemplatesActivityImportMenuItemTitle">Import</string>
    <plurals name="TemplatesListRows">
        <item quantity="one">%d row</item>
        <item quantity="other">%d rows</item>
    </plurals>
    <plurals name="TemplatesListColumns">
        <item quantity="one">, %d column</item>
        <item quantity="other">, %d columns</item>
    </plurals>
    <string name="AssignTitleRowsColsAlertDialogTitleEditTextHint">Template name</string>
    <string name="AssignTitleRowsColsAlertDialogRowsEditTextHint">Number of rows</string>
    <string name="AssignTitleRowsColsAlertDialogColsEditTextHint">Number of columns</string>
    <string name="AssignTitleRowsColsAlertDialogTitle">New Template</string>
    <string name="AssignTitleRowsColsAlertDialogPositiveButtonText">Next</string>
    <string name="AssignTitleRowsColsAlertDialogTitleToast">Template name cannot be empty</string>
    <string name="AssignTitleRowsColsAlertDialogRowsToast">Number of rows not specified</string>
    <string name="AssignTitleRowsColsAlertDialogColsToast">Number of columns not specified</string>
    <string name="ExcludedRowsOrColsAlertDialogTitle">Exclude</string>
    <string name="ExcludedRowsOrColsAlertDialogRowLabel">Row</string>
    <string name="ExcludedRowsOrColsAlertDialogColumnLabel">Column</string>
    <string name="GeneratedExcludedCellsLabelTextViewText">Number of cells to randomly exclude:\u0020</string>
    <string name="GeneratedExcludedCellsAlertDialogTitle">Random</string>
    <string name="ExcludeAlertDialogTitle">Exclude</string>
    <string name="ExcludeAlertDialogRowsItem">Rows</string>
    <string name="SetExcludesOptionalFieldsNumberingAlertDialogCheckAndAddOptionalFieldsButtonText">Set Optional Fields</string>
    <string name="SetExcludesOptionalFieldsNumberingAlertDialogExcludeButtonText">Exclude</string>
    <string name="SetExcludesOptionalFieldsNumberingAlertDialogSetNumberingButtonText">Set Naming</string>
    <string name="preferences_direction_summary">Advance %s</string>
    <string name="preferences_direction_title">Direction</string>
    <string name="preferences_direction_default">@string/preferences_direction_down_then_across_entry_value</string>
    <string name="preferences_sound_title">Sounds</string>
    <string name="preferences_unique_values">Require sample IDs to be unique</string>
    <string name="preferences_unique_options_summary">Samples must be unique %s</string>
    <string name="preferences_unique_option_title">Unique Options</string>
    <string name="preferences_unique_options_default">@string/preferences_unique_options_current_grid</string>
    <string name="preferences_scaling_title">Scaling (%)</string>
    <string name="preferences_scaling_summary">Amount to scale grid by</string>
    <string name="preferences_project_export_summary">Projects export as %s</string>
    <string name="preferences_project_export_title">Project export</string>
    <string name="preferences_project_export_default">@string/preferences_project_export_one_file_per_grid</string>
    <string name="pref_share_on_export_summary">Files can be automatically shared to other services after export.</string>
    <string name="pref_share_on_export_title">Share exports</string>
    <string name="pref_database_reset_summary">This will delete all data stored in the app.</string>
    <string name="pref_database_reset_title">Reset</string>
    <string name="pref_database_title">Database</string>
    <string name="pref_database_export_summary">This will prompt the user to export the local database.</string>
    <string name="pref_database_import_summary">Import a new .zip or .db file that has been saved previously.</string>
    <string name="pref_database_import_title">Import</string>
    <string name="pref_database_export_title">Export</string>
    <string name="pref_database_reload_summary">This will delete all data stored in the app and load sample data.</string>
    <string name="pref_database_reload_title">Reload</string>
    <string name="pref_profile_person_title">Person</string>
    <string name="pref_profile_person_summary">Set a name to auto-fill new grids</string>
    <string name="pref_profile_person_dialog_title">Enter your name</string>
    <string name="pref_profile_verification_interval_title">Verification reminder</string>
    <string name="pref_profile_verification_interval_summary">Ask to verify collector</string>
    <string name="preferences_appearance_tutorial_title">Tutorial</string>
    <string name="preferences_appearance_tutorial_description">Adds a tutorial icon to the collect, settings, fields, and traits screens</string>
    <string name="skip">Skip</string>
    <string name="pref_storage_definer_title">Define storage location</string>
    <string name="pref_storage_definer_summary">Choose the default location to save files.</string>
    <string name="migrate">Migrate</string>
    <string name="frag_storage_migrator_title">Storage Migrator</string>
    <string name="frag_storage_migrator_summary">Coordinate files were not found. Choosing migrate will allow you to select your old Coordinate folder to transfer the data.</string>
    <string name="grid_export_text">Export Grid</string>
    <string name="menu_collector_meta_data_title">Summarize Data</string>
    <string name="project_edit_menu_item_click">Edit Project</string>
    <string name="bottom_nav_bar_settings">Settings</string>
    <string name="bottom_nav_bar_projects">Projects</string>
    <string name="bottom_nav_bar_templates">Templates</string>
    <string name="bottom_nav_bar_grids">Grids</string>
    <string name="pref_brapi_enabled_title">Enable BrAPI</string>
    <string name="pref_brapi_enabled_summary">Show BrAPI features and the BrAPI Plate template</string>
    <string name="pref_brapi_server_category">Server</string>
    <string name="pref_brapi_authorization_category">Authorization</string>
    <string name="pref_brapi_advanced_category">Advanced</string>
    <string name="pref_brapi_base_url_title">Server URL</string>
    <string name="pref_brapi_base_url_hint">https://example.org/brapi/v2</string>
    <string name="pref_brapi_display_name_title">Display Name</string>
    <string name="pref_brapi_oidc_url_title">OIDC Discovery URL</string>
    <string name="pref_brapi_oidc_client_id_title">Client ID</string>
    <string name="pref_brapi_oidc_scope_title">Scope</string>
    <string name="pref_brapi_oidc_flow_title">Auth Flow</string>
    <string name="pref_brapi_oidc_flow_implicit">Implicit</string>
    <string name="pref_brapi_timeout_title">Timeout (seconds)</string>
    <string name="pref_brapi_page_size_title">Page Size</string>
    <string name="pref_brapi_authorize_title">Authorize</string>
    <string name="pref_brapi_authorize_summary">Log in to the BrAPI server</string>
    <string name="pref_brapi_revoke_title">Revoke Token</string>
    <string name="pref_brapi_revoke_summary">Log out of the BrAPI server</string>
    <string name="brapi_filter">Filter</string>
    <string name="brapi_clear_filters">Clear Filters</string>
    <string name="brapi_deselect_all">Deselect All</string>
    <string name="brapi_reset_cache">Reset Cache</string>
</resources>