<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_folder_lock"
        android:key="org.wheatgenetics.coordinate.preferences.STORAGE_DEFINER"
        android:summary="@string/pref_storage_definer_summary"
        android:title="@string/pref_storage_definer_title" />

    <PreferenceCategory
        android:key="category_storage_database"
        android:title="@string/pref_database_title"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">
        <Preference
            android:icon="@drawable/ic_pref_database_delete"
            android:key="org.wheatgenetics.coordinate.RESET_DATABASE"
            android:summary="@string/pref_database_reset_summary"
            android:title="@string/pref_database_reset_title" />
        <Preference
            android:icon="@drawable/ic_pref_database_import"
            android:key="org.wheatgenetics.coordinate.IMPORT_DATABASE"
            android:summary="@string/pref_database_import_summary"
            android:title="@string/pref_database_import_title" />
        <Preference
            android:icon="@drawable/ic_pref_database_export"
            android:key="org.wheatgenetics.coordinate.EXPORT_DATABASE"
            android:summary="@string/pref_database_export_summary"
            android:title="@string/pref_database_export_title" />
        <Preference
            android:icon="@drawable/ic_pref_database_reload"
            android:key="org.wheatgenetics.coordinate.RELOAD_DATABASE"
            android:summary="@string/pref_database_reload_summary"
            android:title="@string/pref_database_reload_title" />
    </PreferenceCategory>
</PreferenceScreen>
