<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_adv_brapi"
        android:key="org.wheatgenetics.coordinate.BRAPI_ENABLED"
        android:summary="@string/pref_brapi_enabled_summary"
        android:title="@string/pref_brapi_enabled_title" />

    <androidx.preference.PreferenceCategory
        android:key="brapi_server"
        android:title="@string/pref_brapi_server_category"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:icon="@drawable/ic_adv_brapi_base"
            android:key="org.wheatgenetics.coordinate.BRAPI_BASE_URL"
            android:title="@string/pref_brapi_base_url_title"
            android:hint="@string/pref_brapi_base_url_hint"
            android:inputType="textUri"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_pref_brapi_name"
            android:key="org.wheatgenetics.coordinate.BRAPI_DISPLAY_NAME"
            android:title="@string/pref_brapi_display_name_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_adv_brapi_base"
            android:key="brapi_authorize"
            android:title="@string/pref_brapi_authorize_title"
            android:summary="@string/pref_brapi_authorize_summary" />

        <Preference
            android:icon="@drawable/ic_pref_brapi_logout"
            android:key="brapi_revoke"
            android:title="@string/pref_brapi_revoke_title"
            android:summary="@string/pref_brapi_revoke_summary" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="brapi_oidc_settings"
        android:title="@string/pref_brapi_authorization_category"
        app:iconSpaceReserved="false">

        <ListPreference
            android:icon="@drawable/ic_pref_brapi_version"
            android:defaultValue="@string/pref_brapi_oidc_flow_implicit"
            android:entries="@array/brapi_oidc_flow_entries"
            android:entryValues="@array/brapi_oidc_flow_values"
            android:key="org.wheatgenetics.coordinate.BRAPI_OIDC_FLOW"
            android:title="@string/pref_brapi_oidc_flow_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_adv_brapi_base"
            android:key="org.wheatgenetics.coordinate.BRAPI_OIDC_URL"
            android:title="@string/pref_brapi_oidc_url_title"
            android:inputType="textUri"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_pref_brapi_client_id"
            android:key="org.wheatgenetics.coordinate.BRAPI_OIDC_CLIENT_ID"
            android:title="@string/pref_brapi_oidc_client_id_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_pref_brapi_scope"
            android:key="org.wheatgenetics.coordinate.BRAPI_OIDC_SCOPE"
            android:title="@string/pref_brapi_oidc_scope_title"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="brapi_advanced"
        android:title="@string/pref_brapi_advanced_category"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:icon="@drawable/ic_pref_brapi_pagination"
            android:key="org.wheatgenetics.coordinate.BRAPI_PAGE_SIZE"
            android:title="@string/pref_brapi_page_size_title"
            android:defaultValue="50"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_pref_brapi_timeout"
            android:key="org.wheatgenetics.coordinate.BRAPI_TIMEOUT"
            android:title="@string/pref_brapi_timeout_title"
            android:defaultValue="120"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>

