<?xml version="1.0" encoding="utf-8"?><!--    Icons: Grids, Templates, Projects, Settings, About-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_nav_grids"
        android:icon="@drawable/ic_dots_grid"
        android:title="@string/bottom_nav_bar_grids" />
    <item
        android:id="@+id/action_nav_templates"
        android:icon="@drawable/ic_templates"
        android:title="@string/bottom_nav_bar_templates" />
    <item
        android:id="@+id/action_nav_projects"
        android:icon="@drawable/ic_clipboard_list"
        android:title="@string/bottom_nav_bar_projects" />
    <item
        android:id="@+id/action_nav_settings"
        android:icon="@drawable/ic_cog"
        android:title="@string/bottom_nav_bar_settings" />
</menu>