<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/export_grid"
        android:icon="@drawable/ic_export_white"
        android:onClick="onExportGridMenuItemClick"
        android:title="@string/grid_export_text"
        app:showAsAction="always"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/action_edit_grid"
        android:icon="@drawable/ic_note_edit_outline"
        android:onClick="onProjectEditMenuItemClick"
        android:title="@string/project_edit_menu_item_click"
        app:showAsAction="always"
        tools:ignore="PrivateResource" />

    <item
        android:id="@+id/action_summarize_data"
        android:icon="@drawable/ic_format_list_text"
        android:title="@string/menu_collector_meta_data_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_white"
        android:title="@string/preferences_appearance_tutorial_title"
        app:showAsAction="always" />
</menu>