<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AssignTitleRowsColsAlertDialogTitleEditTextHint"
        android:inputType="text"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/rowsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AssignTitleRowsColsAlertDialogRowsEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/colsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AssignTitleRowsColsAlertDialogColsEditTextHint"
        android:inputType="number"
        android:maxLines="1"
        android:importantForAutofill="no" />

</LinearLayout>