<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/checkAndAddOptionalFieldsButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:text="@string/SetExcludesOptionalFieldsNumberingAlertDialogCheckAndAddOptionalFieldsButtonText"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/excludeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:text="@string/SetExcludesOptionalFieldsNumberingAlertDialogExcludeButtonText"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/setNumberingButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:text="@string/SetExcludesOptionalFieldsNumberingAlertDialogSetNumberingButtonText"
        android:textAllCaps="false" />

</LinearLayout>